--- a/TransformObjects/src/index.html
+++ b/TransformObjects/src/index.html
@@ -11,6 +11,7 @@
 <body>
     <canvas class="webgl"></canvas>
 
+    <script src="three.min.js"></script>
     <script src="script.js"></script>
 </body>
 
