--- a/AnimateObjects/index.html
+++ b/AnimateObjects/index.html
@@ -12,6 +12,7 @@
 <body>
     <canvas id="webgl"></canvas>
 
+    <script src="gsap.js"></script>
     <script src="three.min.js"></script>
     <script src="app.js"></script>
 </body>
