--- a/Camera/index.html
+++ b/Camera/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <canvas id="webgl"></canvas>
 
     <script src="three.min.js"></script>
     <script src="app.js"></script>
