--- a/MixingHTMLandWebGL/src/index.html
+++ b/MixingHTMLandWebGL/src/index.html
@@ -13,6 +13,12 @@
 
     <div class="loading-bar"></div>
 
+    <div class="point point-0">
+        <label for="" class="label">1</label>
+        <div class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae animi delectus deserunt
+            quas enim inventore harum, expedita nulla ipsum autem!</div>
+    </div>
+
 </body>
 
 </html>
